<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/add_thoughts"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/add_thoughts_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/edit_background"
        android:hint="@string/add_thoughts_hint"
        android:inputType="textMultiLine"
        android:textSize="20sp"
        android:padding="10dp"
        android:maxLines="6" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/thoughts_add_cancel"
            style="@style/Base.Widget.AppCompat.ButtonBar.AlertDialog"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textSize="18sp" />

        <Button
            android:id="@+id/thoughts_add_sure"
            style="@style/Base.Widget.AppCompat.ButtonBar.AlertDialog"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sure"
            android:textSize="18sp" />
    </LinearLayout>
</LinearLayout>