<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_list_name"
        android:textSize="24sp"
        android:layout_margin="8dp"/>

    <EditText
        android:id="@+id/edit_list_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_margin="10sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/edit_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textSize="16sp"
            style="@style/Base.Widget.AppCompat.ButtonBar.AlertDialog"/>

        <Button
            android:id="@+id/edit_sure"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sure_edit"
            android:textSize="16sp"
            style="@style/Base.Widget.AppCompat.ButtonBar.AlertDialog"/>
    </LinearLayout>

</LinearLayout>